[package]
name = "sharepaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
redis = { version = "0.21.4", features = ["async-std-comp"] }
serde = "1.0.117"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
futures = "0.3"
serde_json = "1.0"
